have done authorizate, need to do form for schedule

--- a/config/config.json
+++ b/config/config.json
@@ -8,6 +8,7 @@
             }
         }
     },
+    "password" : "admin123",
     "session": {
         "secret": "KillersJim",
         "key": "sid",
